Open file (electron)

--- a/public/index.html
+++ b/public/index.html
@@ -290,8 +290,8 @@
                         <% } %>
                         <% if(uiLocal === true){ %>
                         <div class="form-group">
-                            <label for="symbolic-link">Locate data</label>
-                            <button class="btn btn-default" type="button" id="get-path-server"><i class="glyphicon glyphicon-floppy-save" aria-hidden="true"></i> Locate <%= typeTitle %></button>
+                            <label for="symbolic-link">Locate data</label><br/>
+                            <button class="btn btn-default" type="button" id="get-path-server"><i class="glyphicon glyphicon-open" aria-hidden="true"></i> Locate <%= typeTitle %></button>
                         </div>
                         <% } %>
                     </form>
